--- a/Bullets/index.html
+++ b/Bullets/index.html
@@ -6,20 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- <meta http-equiv="refresh" content="3" > -->
     <link rel="stylesheet" href="style.css" />
-    <title>Button</title>
+    <title>Bullets</title>
   </head>
   <body>
     <header>
-      <h1 class="center-text">Button Component Page!</h1>
+      <h1 class="center-text">Bullets Component Page!</h1>
     </header>
-    <main class="center-text">
-      <button class="btnComponent">JavaScript Button</button>
-      <hr/>
-      JSS Button
-      <hr/>
-      TypeScript Button
-      <hr/>
-      React Button
+    <main>
+      Bullets here
     </main>
     <script src="script.js"></script>
   </body>
