--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         <p class="center-text">Click on a button to choose list view or grid view.</p>
 
         <div class="center-text" id="buttonContainer">
-            <button onclick="listView()" class="button">List</button> 
-            <button onclick="gridView()" class="button active">Grid</button>
+            <button onclick="listView()" id="listBtn" class="button">List</button> 
+            <button onclick="gridView()" id="gridBtn" class="button">Grid</button>
         </div>
 
-        <div class="row">
+        <div class="component-container">
+          <div class="row">
             <a href="./Accordian/index.html" target="_blank" class="column">
               <h2>Accordian</h2>
               <p>Some text..</p>
@@ -36,20 +37,17 @@
               <h2>Button</h2>
               <p>Some text..</p>
             </a>
-          </div>
-          
-          <div class="row">
             <a href="./Card/index.html" target="_blank" class="column">
               <h2>Card</h2>
               <p>Some text..</p>
             </a>
+          </div>
+          
+          <div class="row">
             <a href="./Form/index.html" target="_blank" class="column">
               <h2>Form</h2>
               <p>Some text..</p>
             </a>
-          </div>
-
-          <div class="row">
             <a href="./Modal/index.html" target="_blank" class="column">
               <h2>Modal</h2>
               <p>Some text..</p>
@@ -59,6 +57,38 @@
               <p>Some text..</p>
             </a>
           </div>
+
+          <div class="row">
+            <a href="./Checklist/index.html" target="_blank" class="column">
+              <h2>Checklist</h2>
+              <p>Some text..</p>
+            </a>
+            <a href="./Bullets/index.html" target="_blank" class="column">
+              <h2>Bullets</h2>
+              <p>Some text..</p>
+            </a>
+            <a href="./Blah/index.html" target="_blank" class="column">
+              <h2>Blah</h2>
+              <p>Some text..</p>
+            </a>
+          </div>
+
+          <div class="row">
+            <a href="./Blah/index.html" target="_blank" class="column">
+              <h2>Blah</h2>
+              <p>Some text..</p>
+            </a>
+            <a href="./Blah/index.html" target="_blank" class="column">
+              <h2>Blah</h2>
+              <p>Some text..</p>
+            </a>
+            <a href="./Blah/index.html" target="_blank" class="column">
+              <h2>Blah</h2>
+              <p>Some text..</p>
+            </a>
+          </div>
+        </div>
+
       </section>
     </main>
     <script src="script.js"></script>
